--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "third_party/fbgemm"]
+	url = git@github.com:RabbitWhite1/FBGEMM.git
 	path = third_party/fbgemm
-	url = https://github.com/pytorch/FBGEMM.git
-	branch = main
